[aiidalab]
title = Empa nanotech@surfaces Laboratory - Scanning Probe Microscopy

[metadata]
name = scanning_probe
version = 1.6.3
author = nanotech@surfaces laboratory, Empa
description = App to run scanning probe microscopy simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-scanning-probe
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-scanning-probe/develop/miscellaneous/logos/empa.png
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-scanning-probe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiida-core~=1.0
    aiidalab-widgets-base~=1.0
    aiida-nanotech-empa~=0.4
    ase
    
[options.entry_points]
aiida.calculations =
    spm.stm = plugins.stm:StmCalculation
    spm.overlap = plugins.overlap:OverlapCalculation
    spm.afm = plugins.afm:AfmCalculation
    spm.hrstm = plugins.hrstm:HrstmCalculation
