[aiidalab]
title = Empa nanotech@surfaces Laboratory - Scanning Probe Microscopy

[metadata]
name = scanning_probe
version = 2.0.0
author = nanotech@surfaces laboratory, Empa
description = App to run scanning probe microscopy simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-scanning-probe
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-scanning-probe/develop/miscellaneous/logos/empa.png
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-scanning-probe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiida-core>=2.1,<3
    aiida-nanotech-empa==v1.0.0a0
    aiidalab-widgets-base==2.0.0b1
    ase
    
[options.entry_points]
aiida.calculations =
    spm.stm = plugins.stm:StmCalculation
    spm.overlap = plugins.overlap:OverlapCalculation
    spm.afm = plugins.afm:AfmCalculation
    spm.hrstm = plugins.hrstm:HrstmCalculation
[options.extras_require]
dev =
    bumpver==2022.1119
    pre-commit~=2.20

[flake8]
ignore =
    E501
    W503
    E203
per-file-ignores =
    tests/*: U100, U101

[aiidalab]
title = Empa nanotech@surfaces Laboratory - On-Surface Chemistry

[bumpver]
current_version = "v1.8.5"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}